manifests/apps/litellm/copilot-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: copilot-api
  name: copilot-api
  namespace: litellm
spec:
  ports:
    - name: "4141"
      port: 4141
      targetPort: 4141
  selector:
    service: copilot-api
