manifests/apps/litellm/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-api-route
  namespace: litellm
spec:
  parentRefs:
    - name: gateway
      namespace: cert-manager
  hostnames:
    - "llm.krea.to"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/
      backendRefs:
        - name: litellm
          port: 4000
          kind: Service
